# activity_finder

./: .gitignore  LICENSE  README.md  README.zh.md  pyproject.toml
src/activity_finder/: __init__.py  cache.py  cli.py  finder.py
tests/: test_finder.py
