[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "activity-finder"
description = "Resolve Android app labels to launch activities via adb and aapt"
requires-python = ">=3.10"
dependencies = ["tqdm"]
authors = [
  { name="jaxonister", email="jaxonister@gmail.com" },
]
readme = "README.md"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/jaxonister/activity_finder"
Issues = "https://github.com/jaxonister/activity_finder/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
activity-finder = "activity_finder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# 动态生成version的配置
[tool.setuptools_scm]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
